tests/snapshots/nonnull_static_array_param.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

unsafe fn sum4(arg0: *mut i32) -> i32 {
    let mut arr: *mut i32 = std::ptr::null_mut();
    let mut __retval: i32 = 0;
    let mut s: i32 = 0;
    arr = arg0;
    let _v0: i32 = 0;
    s = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 4;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i32 = i;
                let _v6: i64 = _v5 as i64;
                let _v7: *mut i32 = arr;
                let _v8: *mut i32 = unsafe { _v7.offset(_v6 as isize) };
                let _v9: i32 = unsafe { *_v8 };
                let _v10: i32 = s;
                let _v11: i32 = _v10 + _v9;
                s = _v11;
            }
            let _v12: i32 = i;
            let _v13: i32 = _v12 + 1;
            i = _v13;
        }
    }
    let _v14: i32 = s;
    __retval = _v14;
    let _v15: i32 = __retval;
    return _v15;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut values: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let _v0: i32 = 0;
    __retval = _v0;
    *values = [1, 2, 3, 4];
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: *mut i32 = values.as_mut_ptr() as *mut i32;
    let _v3: i32 = unsafe { sum4(_v2) };
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: i32 = 0;
    __retval = _v5;
    let _v6: i32 = __retval;
    std::process::exit(_v6 as i32);
}
