tests/snapshots/numeric_parse_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn atoi(_0: *const i8) -> i32;
    fn strtol(_0: *const i8, _1: *mut *mut i8, _2: i32) -> i64;
    fn strtoul(_0: *const i8, _1: *mut *mut i8, _2: i32) -> u64;
    fn atol(_0: *const i8) -> i64;
    fn strtod(_0: *const i8, _1: *mut *mut i8) -> f64;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut whole: [i8; 3] = [0; 3];
    let mut whole_long: [i8; 7] = [0; 7];
    let mut whole_unsigned: [i8; 3] = [0; 3];
    let mut leading: [i8; 10] = [0; 10];
    let mut empty: [i8; 1] = [0; 1];
    let mut large: aligned::Aligned<aligned::A16, [i8; 31]> = aligned::Aligned([0; 31]);
    let mut flt: [i8; 13] = [0; 13];
    let mut end_source: [i8; 7] = [0; 7];
    let mut end: *mut i8 = std::ptr::null_mut();
    let mut raw: i64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    whole = [52, 50, 0];
    whole_long = [45, 49, 50, 51, 52, 53, 0];
    whole_unsigned = [55, 55, 0];
    leading = [32, 32, 45, 49, 55, 116, 97, 105, 108, 0];
    empty = [0];
    *large = [57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 57, 0];
    flt = [32, 32, 45, 51, 46, 53, 101, 50, 114, 101, 115, 116, 0];
    end_source = [49, 50, 116, 97, 105, 108, 0];
    let _v1: *mut i8 = std::ptr::null_mut();
    end = _v1;
    let _v2: *mut i8 = b"%d %ld %lu %ld %ld %lu %.1f\n\0".as_ptr() as *mut i8;
    let _v3: *mut i8 = whole.as_mut_ptr() as *mut i8;
    let _v4: i32 = unsafe { atoi(_v3 as *const i8) };
    let _v5: *mut i8 = whole_long.as_mut_ptr() as *mut i8;
    let _v6: *mut *mut i8 = std::ptr::null_mut();
    let _v7: i32 = 10;
    let _v8: i64 = unsafe { strtol(_v5 as *const i8, _v6 as *mut *mut i8, _v7 as i32) };
    let _v9: *mut i8 = whole_unsigned.as_mut_ptr() as *mut i8;
    let _v10: *mut *mut i8 = std::ptr::null_mut();
    let _v11: i32 = 10;
    let _v12: u64 = unsafe { strtoul(_v9 as *const i8, _v10 as *mut *mut i8, _v11 as i32) };
    let _v13: *mut i8 = leading.as_mut_ptr() as *mut i8;
    let _v14: i64 = unsafe { atol(_v13 as *const i8) };
    let _v15: *mut i8 = large.as_mut_ptr() as *mut i8;
    let _v16: *mut *mut i8 = std::ptr::null_mut();
    let _v17: i32 = 10;
    let _v18: i64 = unsafe { strtol(_v15 as *const i8, _v16 as *mut *mut i8, _v17 as i32) };
    let _v19: *mut i8 = empty.as_mut_ptr() as *mut i8;
    let _v20: *mut *mut i8 = std::ptr::null_mut();
    let _v21: i32 = 10;
    let _v22: u64 = unsafe { strtoul(_v19 as *const i8, _v20 as *mut *mut i8, _v21 as i32) };
    let _v23: *mut i8 = flt.as_mut_ptr() as *mut i8;
    let _v24: *mut *mut i8 = std::ptr::null_mut();
    let _v25: f64 = unsafe { strtod(_v23 as *const i8, _v24 as *mut *mut i8) };
    let _v26: i32 = unsafe { printf(_v2 as *const i8, _v4, _v8, _v12, _v14, _v18, _v22, _v25) };
    let _v27: *mut i8 = end_source.as_mut_ptr() as *mut i8;
    let _v28: i32 = 10;
    let _v29: i64 = unsafe { strtol(_v27 as *const i8, std::ptr::addr_of_mut!(end) as *mut *mut i8, _v28 as i32) };
    raw = _v29;
    let _v30: *mut i8 = b"%ld %c\n\0".as_ptr() as *mut i8;
    let _v31: i64 = raw;
    let _v32: *mut i8 = end;
    let _v33: i8 = unsafe { *_v32 };
    let _v34: i32 = _v33 as i32;
    let _v35: i32 = unsafe { printf(_v30 as *const i8, _v31, _v34) };
    let _v36: i32 = 0;
    __retval = _v36;
    let _v37: i32 = __retval;
    std::process::exit(_v37 as i32);
}
