tests/snapshots/packed_struct.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C, packed)]
#[derive(Clone, Copy)]
struct Packed {
    a: i8,
    b: i32,
    c: i8,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut p: Packed = Packed { a: 0, b: 0, c: 0 };
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i8 = 1;
    p.a = _v1;
    let _v2: i32 = 287454020;
    p.b = _v2;
    let _v3: i8 = 2;
    p.c = _v3;
    let _v4: *mut i8 = b"%zu %zu\n\0".as_ptr() as *mut i8;
    let _v5: u64 = std::mem::size_of::<Packed>() as u64;
    let _v6: u64 = std::mem::align_of::<Packed>() as u64;
    let _v7: i32 = unsafe { printf(_v4 as *const i8, _v5, _v6) };
    let _v8: *mut i8 = b"%zu %zu %zu\n\0".as_ptr() as *mut i8;
    let _v9: u64 = std::mem::offset_of!(Packed, a) as u64;
    let _v10: u64 = std::mem::offset_of!(Packed, b) as u64;
    let _v11: u64 = std::mem::offset_of!(Packed, c) as u64;
    let _v12: i32 = unsafe { printf(_v8 as *const i8, _v9, _v10, _v11) };
    let _v13: *mut i8 = b"%d %x %d\n\0".as_ptr() as *mut i8;
    let _v14: i8 = p.a;
    let _v15: i32 = _v14 as i32;
    let _v16: i32 = p.b;
    let _v17: i8 = p.c;
    let _v18: i32 = _v17 as i32;
    let _v19: i32 = unsafe { printf(_v13 as *const i8, _v15, _v16, _v18) };
    let _v20: i32 = 0;
    __retval = _v20;
    let _v21: i32 = __retval;
    std::process::exit(_v21 as i32);
}
