tests/snapshots/perror_intervening_call_no_rewrite.snap
---
source: tests/snapshot.rs
expression: rust
---
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    static mut stdout: *mut libc::FILE;
    fn remove(_0: *const i8) -> i32;
    fn fflush(_0: *mut libc::FILE) -> i32;
    fn perror(_0: *const i8);
}

fn main() {
    let mut __retval: i32 = 0;
    let mut rc: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"slate_perror_intervening_missing.tmp\0".as_ptr() as *mut i8;
    let _v2: i32 = unsafe { remove(_v1 as *const i8) };
    rc = _v2;
    let _v3: *mut libc::FILE = unsafe { stdout };
    let _v4: i32 = unsafe { fflush(_v3 as *mut libc::FILE) };
    {
        let _v5: i32 = rc;
        let _v6: i32 = 0;
        let _v7: bool = _v5 < _v6;
        if _v7 {
            let _v8: *mut i8 = b"remove failed\0".as_ptr() as *mut i8;
            unsafe { perror(_v8 as *const i8) };
            let _v9: i32 = 1;
            __retval = _v9;
            let _v10: i32 = __retval;
            std::process::exit(_v10 as i32);
        }
    }
    let _v11: i32 = 0;
    __retval = _v11;
    let _v12: i32 = __retval;
    std::process::exit(_v12 as i32);
}
