tests/snapshots/pointers.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn bump_through_pointer(arg3: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    let mut local: i32 = 0;
    let mut ptr: *mut i32 = std::ptr::null_mut();
    value = arg3;
    let _v0: i32 = value;
    local = _v0;
    ptr = std::ptr::addr_of_mut!(local);
    let _v1: *mut i32 = ptr;
    let _v2: i32 = unsafe { *_v1 };
    let _v3: i32 = 3;
    let _v4: i32 = _v2 + _v3;
    let _v5: *mut i32 = ptr;
    unsafe {
        *_v5 = _v4;
    }
    let _v6: i32 = local;
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn add_into_pointer(arg1: *mut i32, arg2: i32) -> i32 {
    let mut slot: *mut i32 = std::ptr::null_mut();
    let mut amount: i32 = 0;
    let mut __retval: i32 = 0;
    slot = arg1;
    amount = arg2;
    let _v0: *mut i32 = slot;
    let _v1: i32 = unsafe { *_v0 };
    let _v2: i32 = amount;
    let _v3: i32 = _v1 + _v2;
    let _v4: *mut i32 = slot;
    unsafe {
        *_v4 = _v3;
    }
    let _v5: *mut i32 = slot;
    let _v6: i32 = unsafe { *_v5 };
    __retval = _v6;
    let _v7: i32 = __retval;
    return _v7;
}

fn pick_with_pointer_arithmetic(arg0: i32) -> i32 {
    let mut index: i32 = 0;
    let mut __retval: i32 = 0;
    let mut values: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut ptr: *mut i32 = std::ptr::null_mut();
    index = arg0;
    let _v0: *mut i32 = values.as_mut_ptr() as *mut i32;
    ptr = _v0;
    let _v1: i32 = 4;
    let _v2: i64 = 0;
    values[(_v2 as usize)] = _v1;
    let _v3: i32 = 8;
    let _v4: i64 = 1;
    values[(_v4 as usize)] = _v3;
    let _v5: i32 = 12;
    let _v6: i64 = 2;
    values[(_v6 as usize)] = _v5;
    let _v7: i32 = 16;
    let _v8: i64 = 3;
    values[(_v8 as usize)] = _v7;
    let _v9: *mut i32 = ptr;
    let _v10: i32 = index;
    let _v11: *mut i32 = unsafe { _v9.offset(_v10 as isize) };
    let _v12: i32 = unsafe { *_v11 };
    __retval = _v12;
    let _v13: i32 = __retval;
    return _v13;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut total: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 10;
    total = _v1;
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = 5;
    let _v4: i32 = bump_through_pointer(_v3);
    let _v5: i32 = unsafe { printf(_v2 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = 7;
    let _v8: i32 = add_into_pointer(std::ptr::addr_of_mut!(total), _v7);
    let _v9: i32 = unsafe { printf(_v6 as *const i8, _v8) };
    let _v10: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v11: i32 = total;
    let _v12: i32 = unsafe { printf(_v10 as *const i8, _v11) };
    let _v13: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v14: i32 = 2;
    let _v15: i32 = pick_with_pointer_arithmetic(_v14);
    let _v16: i32 = unsafe { printf(_v13 as *const i8, _v15) };
    let _v17: i32 = 0;
    __retval = _v17;
    let _v18: i32 = __retval;
    std::process::exit(_v18 as i32);
}
