tests/snapshots/printf_char_width_rejected.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut width: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 3;
    width = _v1;
    let _v2: *mut i8 = b"%*c\n\0".as_ptr() as *mut i8;
    let _v3: i32 = width;
    let _v4: i32 = 97;
    let _v5: i32 = unsafe { printf(_v2 as *const i8, _v3, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
